# Web-Server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_v0.2.1.md  constraints.txt  pyproject.toml  requirements-all.txt  requirements-demo.txt  requirements-dev.txt  requirements.txt  serve.toml  web_server_docs.md
.github/workflows/: ci.yml
Schema/: README.md  cli_args.schema.json  http_request.schema.json  http_response.schema.json  schema_manifest.json  server_config.schema.json  stats_response.schema.json  wsgi_environ.schema.json
demo/: __init__.py  benchmark.py  echo_app.py  error_app.py  flask_app.py  trivial_app.py
demo/django_demo/: __init__.py  manage.py
demo/public/: hello.txt
docs/: benchmark-results.md  capstone-report.md  cli-reference.md  defense-questions.md  demo-rehearsal.md  demo-script.md  deployment.md  production-reflection.md  protocol-mastery-checklist.md  submission-checklist.md
docs/adr/: 0001-concurrency-models.md  0002-sync-wsgi-vs-async.md  0003-keepalive-and-connection.md  0004-production-non-goals.md  0005-parser-limits.md  0006-wsgi-compliance.md  0007-http-version-policy.md  README.md
scripts/: run-demo.ps1  run-demo.sh
src/pyserve/: __init__.py  __main__.py  config.py  dispatch.py  exceptions.py  models.py  parsing.py  server.py
tests/: conftest.py
tests/compliance/: test_django_wsgi.py  test_wsgiref_validate.py
tests/integration/: test_cli.py  test_server_roundtrip.py
tests/load/: test_benchmark_smoke.py
tests/unit/: test_access_log.py  test_access_log_clf.py  test_cli_utils.py  test_concurrency.py  test_config.py  test_dispatch.py  test_encoding.py  test_exceptions.py  test_headers.py  test_listener.py  test_main_module.py  test_middleware.py  test_models.py  test_parsing.py  test_request_parser.py  test_response_serializer.py  test_server.py  test_stats.py  test_status.py  (+3 more)
(+31 files in other folders)
